tests/my/good/good008.lat
int main() {
  printString(f("a"));
  return 3;
}

string f(string s) {
  string x = s + s;
  return x;
}
