tests/my/bad/bad002.lat
int main() {
  string s;
  printString(s);
  string s = printString(s);
}
